# ctidy

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build_hooks.py  cppllvm_build.py  pyproject.toml  setup.py
.github/workflows/: _wheel-build.yml  checks.yml  release-cformat.yml  release-ctidy.yml  release.yml  sdist.yml  upstream.yml  wheel-cformat.yml  wheel-ctidy.yml  wheel-linux-x86_64.yml  wheel-macos-arm64.yml  wheel-macos-x86_64.yml  wheel-windows-amd64.yml  wheels.yml
src/ctidy/: __init__.py  __main__.py  cli.py  discovery.py
tests/: test_cformat_cli.py  test_cli.py  test_cppllvm_build.py  test_discovery.py
tools/: check_upstream.py
