cmake_minimum_required(VERSION 3.20)

if(NOT DEFINED SKBUILD_PROJECT_VERSION)
  set(SKBUILD_PROJECT_VERSION "20.1.8")
endif()

project(ctidy VERSION "${SKBUILD_PROJECT_VERSION}" LANGUAGES C CXX)

include(ExternalProject)

string(REPLACE "." ";" CTIDY_VERSION_PARTS "${PROJECT_VERSION}")
list(GET CTIDY_VERSION_PARTS 0 CTIDY_LLVM_MAJOR_VERSION)

if(DEFINED ENV{CMAKE_BUILD_PARALLEL_LEVEL} AND NOT "$ENV{CMAKE_BUILD_PARALLEL_LEVEL}" STREQUAL "")
  set(CTIDY_LLVM_BUILD_PARALLEL_LEVEL "$ENV{CMAKE_BUILD_PARALLEL_LEVEL}")
else()
  set(CTIDY_LLVM_BUILD_PARALLEL_LEVEL 4)
endif()

set(CTIDY_INSTALL_ROOT "${SKBUILD_PLATLIB_DIR}/ctidy/data")
set(CTIDY_INSTALL_BIN_DIR "${CTIDY_INSTALL_ROOT}/bin")
set(CTIDY_INSTALL_RESOURCE_DIR
    "${CTIDY_INSTALL_ROOT}/lib/clang/${CTIDY_LLVM_MAJOR_VERSION}/include"
)

set(CTIDY_RUN_CLANG_TIDY_SOURCE
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ctidy/data/bin/run-clang-tidy.py"
)
set(CTIDY_LLVM_URL
    "https://github.com/llvm/llvm-project/releases/download/llvmorg-${PROJECT_VERSION}/llvm-project-${PROJECT_VERSION}.src.tar.xz"
)
set(CTIDY_LLVM_SOURCE_DIR "${CMAKE_BINARY_DIR}/llvm-project-src")
set(CTIDY_LLVM_BINARY_DIR "${CMAKE_BINARY_DIR}/llvm-project-build")
set(CTIDY_CLANG_TIDY "${CTIDY_LLVM_BINARY_DIR}/bin/clang-tidy${CMAKE_EXECUTABLE_SUFFIX}")
set(CTIDY_CLANG_APPLY_REPLACEMENTS
    "${CTIDY_LLVM_BINARY_DIR}/bin/clang-apply-replacements${CMAKE_EXECUTABLE_SUFFIX}"
)

set(CTIDY_EXTERNAL_CMAKE_ARGS
    -DCMAKE_BUILD_TYPE=Release
    -DBUILD_SHARED_LIBS=OFF
    -DCLANG_ENABLE_ARCMT=OFF
    -DCLANG_ENABLE_CLANGD=OFF
    -DCLANG_ENABLE_STATIC_ANALYZER=ON
    -DCLANG_INSTALL_SCANBUILD=OFF
    -DCLANG_INSTALL_SCANVIEW=OFF
    -DLLVM_BUILD_BENCHMARKS=OFF
    -DLLVM_BUILD_DOCS=OFF
    -DLLVM_BUILD_EXAMPLES=OFF
    -DLLVM_BUILD_RUNTIME=OFF
    -DLLVM_BUILD_RUNTIMES=OFF
    -DLLVM_BUILD_TELEMETRY=OFF
    -DLLVM_BUILD_TESTS=OFF
    -DLLVM_ENABLE_BINDINGS=OFF
    -DLLVM_ENABLE_LIBXML2=OFF
    -DLLVM_ENABLE_PROJECTS:STRING=clang,clang-tools-extra
    -DLLVM_ENABLE_OCAMLDOC=OFF
    -DLLVM_ENABLE_ZLIB=OFF
    -DLLVM_ENABLE_ZSTD=OFF
    -DLLVM_INCLUDE_BENCHMARKS=OFF
    -DLLVM_INCLUDE_DOCS=OFF
    -DLLVM_INCLUDE_EXAMPLES=OFF
    -DLLVM_INCLUDE_RUNTIMES=OFF
    -DLLVM_INCLUDE_TESTS=OFF
    -DLLVM_INCLUDE_UTILS=ON
    -DLLVM_TARGETS_TO_BUILD=Native
)

if(CMAKE_C_COMPILER)
  list(APPEND CTIDY_EXTERNAL_CMAKE_ARGS -DCMAKE_C_COMPILER:FILEPATH=${CMAKE_C_COMPILER})
endif()

if(CMAKE_CXX_COMPILER)
  list(APPEND CTIDY_EXTERNAL_CMAKE_ARGS -DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER})
endif()

if(CMAKE_ASM_COMPILER)
  list(APPEND CTIDY_EXTERNAL_CMAKE_ARGS -DCMAKE_ASM_COMPILER:FILEPATH=${CMAKE_ASM_COMPILER})
endif()

if(WIN32)
  list(APPEND CTIDY_EXTERNAL_CMAKE_ARGS -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded)
endif()

ExternalProject_Add(
  ctidy_llvm
  URL "${CTIDY_LLVM_URL}"
  DOWNLOAD_EXTRACT_TIMESTAMP TRUE
  SOURCE_DIR "${CTIDY_LLVM_SOURCE_DIR}"
  SOURCE_SUBDIR llvm
  BINARY_DIR "${CTIDY_LLVM_BINARY_DIR}"
  LIST_SEPARATOR ","
  USES_TERMINAL_CONFIGURE TRUE
  USES_TERMINAL_BUILD TRUE
  CMAKE_ARGS ${CTIDY_EXTERNAL_CMAKE_ARGS}
  BUILD_COMMAND
    ${CMAKE_COMMAND} --build <BINARY_DIR> --config Release --parallel
    ${CTIDY_LLVM_BUILD_PARALLEL_LEVEL} --verbose --target
    clang-tidy clang-apply-replacements
  INSTALL_COMMAND ""
  BUILD_BYPRODUCTS "${CTIDY_CLANG_TIDY}" "${CTIDY_CLANG_APPLY_REPLACEMENTS}"
)

install(
  PROGRAMS "${CTIDY_CLANG_TIDY}" "${CTIDY_CLANG_APPLY_REPLACEMENTS}"
  DESTINATION "${CTIDY_INSTALL_BIN_DIR}"
)
install(PROGRAMS "${CTIDY_RUN_CLANG_TIDY_SOURCE}" DESTINATION "${CTIDY_INSTALL_BIN_DIR}")
install(
  DIRECTORY "${CTIDY_LLVM_SOURCE_DIR}/clang/lib/Headers/"
  DESTINATION "${CTIDY_INSTALL_RESOURCE_DIR}"
)
