[build-system]
requires = [
  "cmake>=3.20",
  "ninja>=1.11",
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "ctidy"
version = "20.1.8"
description = "Bundled clang-tidy wheels with a ctidy entrypoint."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0 WITH LLVM-exception" }
authors = [{ name = "ctidy" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
scripts = { ctidy = "ctidy.cli:main" }

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.source-dir = "."
cmake.version = ">=3.20"
wheel.py-api = "py3"
wheel.packages = ["src/ctidy"]
sdist.include = [
  ".github/workflows/*.yml",
  "AGENTS.md",
  "CMakeLists.txt",
  "README.md",
  "pyproject.toml",
  "src/ctidy/**",
  "tools/**",
]

[tool.cibuildwheel]
build-verbosity = 1
test-command = "python -c \"import subprocess; subprocess.check_call(['ctidy', '--help']); subprocess.check_call(['ctidy', '--version'])\""

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
