[build-system]
requires = [
  "setuptools>=70.1",
  "wheel>=0.43",
  "tomli>=1.2; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "ctidy"
version = "20.1.0"
description = "Bundled clang-tidy wheels with a ctidy entrypoint."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0 WITH LLVM-exception"
authors = [{ name = "ctidy" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
scripts = { ctidy = "ctidy.cli:main" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ctidy]
prebuilt_release_tag = "master-796e77c"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "python -c \"import subprocess; subprocess.check_call(['ctidy', '--help']); subprocess.check_call(['ctidy', '--version'])\""

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "setuptools>=70.1",
    "tomli>=1.2",
    "ty>=0.0.23",
]

[tool.ruff]
target-version = "py39"
extend-exclude = [
  "src/ctidy/data/bin/run-clang-tidy.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
