[project]
name = "cppllvm-workspace"
version = "0.0.0"
description = "Workspace configuration for the cppllvm monorepo."
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "setuptools>=70.1",
    "tomli>=1.2",
    "ty>=0.0.23",
]

[tool.ruff]
target-version = "py39"
extend-exclude = [
  "packages/ctidy/src/ctidy/data/bin/run-clang-tidy.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.ty.src]
exclude = [
  "packages/ctidy/src/ctidy/data/bin/run-clang-tidy.py",
]
